# TradingView-Machine-Learning-GUI

./: .copilotignore  .gitignore  README.md  config.json  config.schema.json  pyproject.toml  requirements.txt
_engine/: _runtime.py  _utils.py  config.py  models.py  presets.py
_engine/backtest/: engine.py
_engine/cli/: __init__.py  _helpers.py  backtest.py  download.py  hyperopt.py
_engine/downloader/: client.py
_engine/downloader/_tv/: cache.py  protocol.py  session.py
_engine/hyperopt/: optimizer.py
hyperview/: __init__.py  config.py  models.py  presets.py  utils.py  validators.py
hyperview/backtest/: __init__.py  engine.py
hyperview/cli/: __init__.py  backtest.py  download.py  formatting.py  hyperopt.py  list.py
hyperview/downloader/: __init__.py  cache.py  client.py  credentials.py  session.py  timeframes.py
hyperview/hyperopt/: optimizer.py
strategy/: __init__.py  adx_stochastic.py  base.py  indicators.py  macd_rsi.py
strategy/_lib/: indicators.py
